--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
 pyyaml==6.0
+numpy==1.22.3
+pandas==1.4.1
+seaborn==0.11.2
+matplotlib==3.5.1
+sklearn==0.0
+lime==0.2.0.1
+shap==0.40.0
+tqdm==4.63.1
+scikit-learn==1.0.2
+ipywidgets==7.7.0
+h5py==3.6.0
